--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <p><h4>blg63121@gmail.com</h4></p>
         <p><h4>314-449-4263</h4></p>
     <hr>
-    <img src="./Images/Me.jpg" height="200">
+    <img src="../Images/Me.jpg" height="200">
         <h3>Summary</h3>
         <p>I am a skilled professional with a Bachelor's degree in Computer Engineering and Networking Technology, possessing extensive experience in IT support, 
            network administration, and project management. With a proven track record in providing excellent customer service and communication, 
