--- a/Hobbies.html
+++ b/Hobbies.html
@@ -7,7 +7,7 @@
     <body>
     <h1>Hobbies</h1>
     <ul>
-        <li>Make music using FL Studio 21 <img src="./Images/Fl Studio.Png"></li>
+        <li>Make music using FL Studio 21 <img src="./Images/Fl studio.PNG"></li>
         <li>Amateur Boxing</li>
         <li>Playing video games</li>
     </body>
