--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         </head>
     <body>
         <a href="./Hobbies.html">Hobbies</a>
+        <a href="./Contact.html">Contact Me</a>
         <h1> Barry Gales Resume </h1>
         <hr>
         <h3>Contact Info</h3>
