--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
             <li>Proactively seek ways to increase productivity across the network by hardware changes, software upgrades, etc.</li>
             <li>Make recommendations to supervisor, management information about suggested improvements over two sites</li></h4>
         </ul>
+        <footer>Barry Gales 2024</footer>
     </html>
 
 
