--- a/Contact.html
+++ b/Contact.html
@@ -3,8 +3,10 @@
 <head>
   <meta charset="UTF-8>
   <Title>Contact Me</Title>
+</head>
 <body>
 <p>Barry Gales</p>
 <p>314-449-4263</p>
 <p><a href="mailto:blg63121@gmail.com">blg63121@gmail.com</a>
-</head>
+</body>
+</html>
