--- a/Contact.html
+++ b/Contact.html
@@ -7,6 +7,6 @@
 <body>
 <p>Barry Gales</p>
 <p>314-449-4263</p>
-<p><a href="mailto:blg63121@gmail.com">blg63121@gmail.com</a>
+<a href="mailto:blg63121@gmail.com">blg63121@gmail.com</a>
 </body>
 </html>
