--- a/Contact.html
+++ b/Contact.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-  <meta charset="UTF-8>
+  <meta charset="UTF-8">
   <Title>Contact Me</Title>
 </head>
 <body>
 <p>Barry Gales</p>
+<p>Saint Louis, MO 63136</p>
 <p>314-449-4263</p>
 <a href="mailto:blg63121@gmail.com">blg63121@gmail.com</a>
 </body>
