--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
            I am adept at diagnosing and troubleshooting various hardware 
            and software issues for PCs, Macs, printers,as well as Apple and Android devices. 
            I have proficiency in managing projects, configuring servers, and setting up networks, including LAN and WAN protocols.
-        <p>My expertise includes proficiency with operating systems such as Windows, macOS, and Linux, as well as experience with Microsoft Azure, Intune, Active Directory, and Cisco IOS. 
+        <p>My expertise includes proficiency with operating systems such as Windows, macOS, and Linux, as well as experience with Microsoft Azure, Intune, Active Directory,Cisco IOS, Microsoft O365 configuration and license requirements 
+        with user administration, tenant migrations, OneDrive, Exchange, Outlook, and Sharepoint. 
             With my strong technical skills, dedication to customer service, and proven ability to manage projects effectively, 
             I am seeking a challenging position in IT that will allow me to utilize my expertise and contribute to the success of the organization.</p>
            <hr>
@@ -29,7 +30,7 @@
         <ul>
         <h4><li>Excellent customer service and communication skills in person and over the phone</li>
             <li>Formal Education including a Bachelor's degree in Computer Engineering and Networking Technology</li>
-            <li>Competent with Windows 7, Windows 10, Windows 11, Microsoft Azure/IEntra, Intune configuration, SCCM, Microsoft Word, Excel, PowerPoint, Outlook, Windows XP, LAN topologies, TCP/IP, Routing Fundamentals, and Application Layer Protocols</li>
+            <li>Competent with Microsoft Windows 10, Windows 11, Microsoft Azure/Entra, Intune, SCCM, Microsoft Word, Excel, PowerPoint, Outlook,LAN topologies, TCP/IP, Routing Fundamentals, and Application Layer Protocols</li>
             <li>Skilled in server configurations, routing, managing projects, and setting up servers</li>
             <li>Familiar with troubleshooting accounts, security system management, and SCSI devices</li>
             <li>Ability to upgrade, network, configure, and customize desktops</li>
@@ -37,6 +38,9 @@
             <li>Experience in Active Directory, setting up group policies, and user accounts.</li>
             <li>Experience with MAC OS and Apple iOS operating systems</li>
             <li>Configuration of Azure/Entra</li>
+            <li>Managing a team of IT professionals to consistently reach SLAs</li>
+            <li>Problem Solver and Critical thinking</li>
+            <li>Ability to remain calm through stressful situations</li>
             <li>Web Development</li></h4>
         </ul>
     </hr>
@@ -49,7 +53,8 @@
             <li>Manage mobile device management migration of 5000 Apple devices from AirWatch to InTune, increasing network security from 64% to 100%.</li>
             <li>Develop and execute training programs and resource guides for end users, enhancing their proficiency with InTune</li>
             <li>Lead troubleshooting efforts across teams, consistently achieving service level agreements.
-            <li>Collaborate with Audio Visual team to identify, re-image, and deploy mini PCs for digital signage</li></h4>
+            <li>Collaborate with Audio Visual team to identify, re-image, and deploy mini PCs for digital signage</li>
+            <li>Office 365 User Administration, License deployments, Tenant Migrations, Configuration of Two Factor Authentication Method</li></h4>
         </ul>
     </hr>
         <h3>Technical Support Specialist</h3>
@@ -92,7 +97,8 @@
             <li>Ensure backup tapes of network programs and data files remain current. </li>
             <li>Inform the manager, management information systems on status of current projects.</li>
             <li>Proactively seek ways to increase productivity across the network by hardware changes, software upgrades, etc.</li>
-            <li>Make recommendations to supervisor, management information about suggested improvements over two sites</li></h4>
+            <li>Make recommendations to supervisor, management information about suggested improvements over two sites</li>
+            <li>Office 365 User Administration, License deployments, Tenant Migrations, Configuration of Two Factor Authentication Method</li></h4>
         </ul>
         <footer>Barry Gales 2024</footer>
     </html>
