--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
             <li>Managing a team of IT professionals to consistently reach SLAs</li>
             <li>Problem Solver and Critical thinking</li>
             <li>Ability to remain calm through stressful situations</li>
-            <li>Web Development</li></h4>
+            <li>Web Development</li>
+            <li> Apple MAC OS</li></h4>
         </ul>
     </hr>
         <h2>Employment</h2>
