--- a/index.html
+++ b/index.html
@@ -42,13 +42,15 @@
             <li>Problem Solver and Critical thinking</li>
             <li>Ability to remain calm through stressful situations</li>
             <li>Web Development</li>
-            <li> Apple MAC OS</li></h4>
+            <li>Apple MAC OS</li>
+            <li>SQL</li></h4>
         </ul>
     </hr>
+    <hr>
         <h2>Employment</h2>
         <h3>Operations Technician</h3>
         <h3>Ameren</h3>
-        <h4>November-Present
+        <h4>November 2023-Present
     </hr>
         <ul>
             <li>Manage mobile device management migration of 5000 Apple devices from AirWatch to InTune, increasing network security from 64% to 100%.</li>
@@ -58,17 +60,7 @@
             <li>Office 365 User Administration, License deployments, Tenant Migrations, Configuration of Two Factor Authentication Method</li></h4>
         </ul>
     </hr>
-        <h3>Technical Support Specialist</h3>
-        <h3>Hello Tech</h3>
-        <h4>March 2016 - April 2019
-    </hr>
-        <ul>
-            <li>Diagnose and troubleshoot PCs, Macs, Printers.</li>
-            <li>Diagnose and troubleshoot Apple and Android devices.</li>
-            <li>Troubleshoot home and business networks.</li>
-            <li>Configure Windows Servers.</li>
-            <li>Configure IP Cameras, CCTV Cameras.</li></h4>
-        </ul>
+        
     </hr>
     <h3>IT Support Analyst (Plant Support)</h3>
     <h3>Missouri Metals</h3>
@@ -98,9 +90,107 @@
             <li>Ensure backup tapes of network programs and data files remain current. </li>
             <li>Inform the manager, management information systems on status of current projects.</li>
             <li>Proactively seek ways to increase productivity across the network by hardware changes, software upgrades, etc.</li>
-            <li>Make recommendations to supervisor, management information about suggested improvements over two sites</li>
-            <li>Office 365 User Administration, License deployments, Tenant Migrations, Configuration of Two Factor Authentication Method</li></h4>
+            <li>Make recommendations to supervisor, management information about suggested improvements over two sites.</li>
+            <li>Office 365 User Administration, License deployments, Tenant Migrations, Configuration of Two Factor Authentication Method.</li></h4>
         </ul>
+    
+    <h3>Senior Assistant</h3>
+    <h3>DXC Technology<h3>
+    <h4>April 2020 - August 2021
+    </hr>
+        <ul>
+            <li>Provides on-site field support to customers including installation, and servicing and repairing of systems and equipment ranging from Windows OS to MAC and software.</li>
+            <li>Answers customer questions and resolves issues. Refers other issues/questions to appropriate personnel/service area/manager for follow up, testing and troubleshooting.</li>
+	        <li>Assists in instructing customers in the operation and maintenance of systems/equipment.</li>
+	        <li>Acts as a liaison with customers on administrative and technical matters for assigned projects.</li>
+	        <li>Performs analyses and prepares reports on system problem trends and issues.</li>
+	        <li>Assists in applying engineering principles and practices as they relate to system design, process flow and/or discrete modeling.</li>
+	        <li>Interacts with the client's engineers, as necessary, to gather information, design changes, requirements, etc. to compile information for the overall solution design.</li>
+            <li>Assists in translating the engineering design into software design and development of test plans to verify logic of new or modified technical programs.</li>
+	        <li>Performs testing of the final product and works with the client's engineers to assure that the product performs as planned.</li>
+	        <li>Assists in the design of basic technical programs for projects or enhancements to existing programs.</li></h4>
+        </ul>
+    </hr>
+    <h3>Senior Assistant Field Tech</h3>
+    <h3>ARK Solutions Inc's (DXC Technology)</h3>
+    <h4>June 2019 - April 2020
+   </hr>
+        <ul>
+            <li>Provides on-site field support to customers including installation, and servicing and repairing of systems and equipment.</li>
+            <li>Answers customer questions and resolves issues. Refers other issues/questions to appropriate personnel/service area/manager for follow up, testing and troubleshooting.</li>
+            <li>Assists in instructing customers in the operation and maintenance of systems/equipment.</li>
+            <li>Acts as a liaison with customers on administrative and technical matters for assigned projects.</li>
+            <li>Performs analyses and prepares reports on system problem trends and issues.</li>
+            <li>Assists in applying engineering principles and practices as they relate to system design, process flow and/or discrete modeling.</li>
+            <li>Interacts with the client's engineers, as necessary, to gather information, design changes, requirements, etc. to compile information for the overall solution design.</li>
+            <li>Assists in translating the engineering design into software design and development of test plans to verify logic of new or modified technical programs.</li>
+            <li>Performs testing of the final product and works with the client's engineers to assure that the product performs as planned.</li>
+            <li>Assists in the design of basic technical programs for projects or enhancements to existing programs.</li></h4>
+        </ul>
+    </hr>
+    <h3>I.T. Analyst</h3>
+    <h3>Schnucks</h3>           
+    <h4>October 2018 - June 2019
+    </hr>
+        <ul>
+            <li>Assist internal employees with PC issues.</li>
+            <li>Monitor networks for stores.</li>
+            <li>Monitor Alarms on refrigerators, Freezers, HVAC units and route to proper vendors</li>
+            <li>Use Active Directory to unlock accounts, change passwords, manage user and group accounts</li>
+            <li>Used Solarwinds to monitor network.</li></h4>
+        </ul>
+    </hr>
+    <h3>Technical Support Specialist</h3>
+    <h3>Hello Tech</h3>
+    <h4>March 2016 - April 2019
+    </hr>
+        <ul>
+            <li>Diagnose and troubleshoot PCs, Macs, Printers.</li>
+            <li>Diagnose and troubleshoot Apple and Android devices.</li>
+            <li>Troubleshoot home and business networks.</li>
+            <li>Configure Windows Servers.</li>
+            <li>Configure IP Cameras, CCTV Cameras.</li></h4>
+        </ul>
+    <h3>Field Technician</h3>
+    <h3>Geeks on Site</h3>
+    <h4>March 2016 - January 2017
+    </hr>
+        <ul>
+            <li>Diagnose and resolve issues for Windows and Macs ranging from user education to application installations.</li>
+            <li>Supported small businesses and residential</li>
+            <li>Removed viruses</li>
+            <li>OS reinstallations</li>
+            <li>System Setup and training</li></h4>
+    </hr>
+    <h3>Tech Support</h3>
+    <h3>Intercard Inc</h3>
+    <h4>August 2014 - November 2015
+        <ul>
+            <li>Worked with SQL Databases, searched for devices and MAC addresses using queries</li>
+            <li>Installed LAN networks onsite for customers around the world using a combination of Cisco routers, two transaction servers, Cisco Access Points 1100-1700 series, and other peripherals.</li>
+            <li>Configured Cisco routers with preconfigured files changing the static IP for customer's ISP, FA4/WAN port for Intercard's equipment, IP routing with ISP gateway, access-lists</li>
+            <li>Configured Cisco Access Point 1100-1700 series with SSIDs and settings for proper function of card readers.</li>
+            <li>Configured Windows Servers 2003-2012 R2 servers with DHCP, specific scope options necessary for proper installation, Set Static IP information pertaining to the customer's site,installed other software such as Intercard Transaction Server, NetEpay (Credit Card Software from Datacap Systems), created users through Access Directory, configured settings through Group Policy Editor.</li>
+            <li>Traveled globally for installation of equipment.</li>
+            <li>Trained a variety of people from all types of backgrounds in the use of the Intercard system utilizing different tools for language barriers such as Google translate and knowledge of language</li>
+            <li>Diagnosed PC hardware and OS system issues (Windows XP, Windows 7, and Windows 8, Windows Server 2003-2012 R2) ranging from hard drive failures to network connectivity.</li>
+            <li>Configured Intercard kiosks with proper Intercard software. Firewall Settings, Administrator account, automatic login (netplwiz) etc.</li>
+            <li>Configured Windows7 POS systems with the proper Intercard software and settings.</li>
+            <li>Handled at least 40-50 phone calls per day, assisting customers with issues</li>
+            <li>Monitored E-mails using ticket software (Spice Works) over 100 e-mails per day</li>
+            <li>Supported over 50 customers daily Monday-Friday and more on weekends with issues ranging from credit cards not processing to POS and Kiosks not seeing UDP broadcasts from Transaction Servers</li>
+            <li>Used Wireshark, Advanced IP Scanner, Look@LAN to troubleshoot customers' local area networks.</li>
+            <li>Used Teamviewer, Ammyy, and TightVNC for remote troubleshooting</li></h4>
+        </hr>
+    <h3>Computer Field Technician
+    <h3>Worldwide TechServices</h3> 
+    <h4>January 2012 to April 2013
+        <ul>
+            <li>Perform on-site computer hardware repair for businesses and individuals, traveling to different locations         
+            <li>Provide solutions for various issues, hardware, software, virus scans, etc.
+            <li>Provide excellent customer service in a timely manner
+            <li>Go above and beyond the call of duty with the customer's needs in mind
+            <li>Repaired electronic devices ranging from laptops and desktops(Dell,HP, Lenovo), Printers and Copiers(Xerox, Lexmark), TVs(LG,Vizio, Samsung)</li></h4>
         <footer>Barry Gales 2024</footer>
     </html>
 
