--- a/index.html
+++ b/index.html
@@ -49,6 +49,18 @@
     </hr>
     <hr>
         <h2>Employment</h2>
+	<h3>Consultant</h3>
+	<h3>C Three Business Consultants</h3>
+	<h4>November 2023 - Present</h4>
+    </hr>
+	<ul>
+	<li>Troubleshoot various issues for clients</li>
+	<li>Equipment pricing and procurement</li>
+	<li>Configuration of Azure/Entra</li>
+	<li>Powershell scripting for Azure/Entra</li>
+	<li>Set up business networks for clients</li>
+	</ul>
+    </body>
         <h3>Operations Technician</h3>
         <h3>Ameren</h3>
         <h4>November 2023-Present
