--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
         <head>
             <meta charset="UTF-8">
             <Title>My Resume</Title>
+             <style>
+                .top-menu{
+                   display:inline-flex;
+                   gap:20px;
+                   flex-direction:column;
+                   border:solid black;
+                   margin:0;
+                }
+                </style>
         </head>
     <body>
         <a href="./Hobbies.html">Hobbies</a>
@@ -51,14 +60,14 @@
         <h2>Employment</h2>
 	<h3>Consultant</h3>
 	<h3>C Three Business Consultants</h3>
-	<h4>November 2023 - Present</h4>
+	<h4>November 2023 - Present
     </hr>
 	<ul>
 	<li>Troubleshoot various issues for clients</li>
 	<li>Equipment pricing and procurement</li>
 	<li>Configuration of Azure/Entra</li>
 	<li>Powershell scripting for Azure/Entra</li>
-	<li>Set up business networks for clients</li>
+	<li>Set up business networks for clients</li></h4>
 	</ul>
     </body>
         <h3>Operations Technician</h3>
