--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </head>
     <body>
         <a href="./Hobbies.html">Hobbies</a>
-        <a href="./Transcripts">College Transcripts</a>
+        <a href="./Transcripts.html">College Transcripts</a>
         <a href="./Contact.html">Contact Me</a>
         <h1> Barry Gales Resume </h1>
         <hr>
