--- a/index.html
+++ b/index.html
@@ -10,13 +10,17 @@
                    flex-direction:column;
                    border:solid black;
                    margin:0;
+		#navigation-bar{
+			display:none;
+			cursor:pointer;
                 }
                 </style>
         </head>
     <body>
-        <a href="./Hobbies.html">Hobbies</a>
+     <nav id=navigation-bar>
+        <a class href="./Hobbies.html">Hobbies</a>
         <a href="./Transcripts.html">College Transcripts</a>
-        <a href="./Contact.html">Contact Me</a>
+        <a href="./Contact.html">Contact Me</a></nav>
         <h1> Barry Gales Resume </h1>
         <hr>
         <h3>Contact Info</h3>
